---------------------------------------------------------------------------------------------------
Version: 1.8.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: 2025-07-20
  Changes:
    - Our first player-facing settings: 'Warn on hidden prerequisites' and 'Unlink hidden prerequisites'. These prevent unresearchable technologies from arising due to compatibility issues.
---------------------------------------------------------------------------------------------------
Version: 1.7.1-1.7.3
Date: 2025-07-20
  Changes:
    - In order for players to hold their tiers fixed and still be able to update PlanetsLib, the tiers have moved to a new mod: PlanetsLib: Tiers
    - You can now access their values using `local tier = data.raw["mod-data"]["PlanetsLib-tierlist"].data[type][name] or data.raw["mod-data"]["PlanetsLib-tierlist"].data.default`. (The APIs get_planet_tier and get_space_location_tier are now undocumented but still exist for backwards compatibility.)
  Info:
    - Changelog update.
---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: 2025-07-15
  Changes:
    - Added unified interface allowing planets to define rocket silo recipes on a per-surface basis.
---------------------------------------------------------------------------------------------------
Version: 1.6.4
Date: 2025-07-10
  Bugfixes:
    - Fixed a possible crash in the cargo pod remote interface.
  Locale:
    - Added German translation.
  Changes:
    - Update to the orbit generator script to support valid sprites for larger orbit radii.
---------------------------------------------------------------------------------------------------
Version: 1.6.3
Date: 2025-06-29
  Changes:
    - Tiers: Stargate from Metal and Stars to tier 4
---------------------------------------------------------------------------------------------------