@@ -26,8 +26,11 @@ parent-planet-str=
 planet-str=
 
 [planetslib]
+planetslib-print=[PlanetsLib]: 
 cargo-pod-canceled=[Whisper] Unsafe cargo pod from __1__ aborted. __2__ required.
 cargo-drops-tech-description=Allows cargo pods containing more than just players to land on __1__.
+warn-unreachable-techs=Warning, suspected unresearchable technologies: __1__. PlanetsLib has mod settings to help you unlink them or disable this warning.
+notify-unlinked-prerequisites=Per the 'Unlink hidden prerequisites' setting, the following technologies have been unlinked from their successors: __1__.
 
 [technology-name]
 cargo-drops=__1__ cargo drops
