@@ -2,6 +2,7 @@
 Version: 1.8.1
 Date: ????
   Changes:
+    - 'Unlinked prerequisites' text moved to locale file.
 ---------------------------------------------------------------------------------------------------
 Version: 1.8.0
 Date: 2025-07-20
